--- a/public/components/email-3-col_v1.html
+++ b/public/components/email-3-col_v1.html
@@ -1,7 +1,7 @@
 <table class="email-component-container {{component.type}}-v{{component.version}}" align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr ng-if="component.title">
         <td>
-            <table align="center" border="0" cellpadding="0" cellspacing="0" width="640" id="templateColumns">
+            <table align="center" border="0" cellpadding="0" cellspacing="0"  id="templateColumns">
                 <tr>
                     <td align="center" valign="top" width="100%" class="templateColumnContainer">
                         <table border="0" cellpadding="10" cellspacing="0" width="100%">
@@ -18,7 +18,7 @@
     </tr>
     <tr>
         <td>
-            <table align="center" border="0" cellpadding="0" cellspacing="0" width="640" id="templateColumns">
+            <table align="center" border="0" cellpadding="0" cellspacing="0"  id="templateColumns">
                 <tr>
                     <td align="center" valign="top" width="33%" class="templateColumnContainer" style="padding-right: 10px">
                         <table border="0" cellpadding="10" cellspacing="0" width="100%">
