--- a/public/components/email-social_v1.html
+++ b/public/components/email-social_v1.html
@@ -1,7 +1,7 @@
 <table class="email-component-container {{component.type}}-v{{component.version}}" align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
     <tr>
         <td>
-            <table align="center" border="0" cellpadding="0" cellspacing="0" width="640" id="templateColumns">
+            <table align="center" border="0" cellpadding="0" cellspacing="0" id="templateColumns">
                 <tr>
                     <td align="center" width="100%" class="templateColumnContainer">
                         <table border="0" cellpadding="10" cellspacing="0" width="100%">
