--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -145,6 +145,10 @@ contact-details-component{
                         a{
                             box-shadow: none !important;
                             background: transparent !important;
+                            @media screen and (max-width: 492px) {
+                                padding: 15px 3px;
+                                font-size: 11px;
+                            }
                         }
                         &.active{                            
                             border-bottom: 2px solid #48b1cc;
@@ -156,8 +160,10 @@ contact-details-component{
                 }           
             }
             .address-pane{
-                .details{
-                    margin-top: 80px;
+                @media screen and (min-width: 768px) {
+                    .details{
+                        margin-top: 80px;
+                    }
                 }
             }
             .details{
