--- a/public/less/frontend/components/shopping-cart-v1.less
+++ b/public/less/frontend/components/shopping-cart-v1.less
@@ -94,7 +94,7 @@
       .modal-body {
         padding: 0 10px;
         min-height: 200px;
-        height: calc(~"100vh - 185px");
+        //height: calc(~"100vh - 185px"); #10594
         overflow-y: auto;
         overflow-x: hidden;
         @media screen and (max-width: 767px) {
