--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -374,7 +374,7 @@
         </div>
         <!-- contact timeline/notes pane -->
         <div class="col-xs-12 col-sm-6 contact-details-right-pane">
-            <div class="panel panel-white" id="notes">
+            <div class="panel panel-white hidden" id="notes">
                 <div class="panel-heading border-light">
                     <h4 class="panel-title">Contact <span class="text-bold">Notes</span></h4>
                     <ct-paneltool class="panel-tools" tool-collapse="tool-collapse"></ct-paneltool>
