--- a/public/less/ssb-site-builder/ssb-sections/ssb-mixed-media.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-mixed-media.less
@@ -45,4 +45,10 @@
         position: relative;
         overflow: hidden;
     }
+    .image-overlay{
+        height: 120px;
+        .header , .desc {
+            height: 60px;
+        }
+    }
 }
