--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -553,6 +553,7 @@
                 float: unset;
                 width: unset;
                 min-height: 75px !important;
+                margin-top: 75px;
             }
         });
     }
