--- a/public/less/frontend/components/text-only-v1.less
+++ b/public/less/frontend/components/text-only-v1.less
@@ -25,7 +25,7 @@
     a.ssb-element-button,a.btn-link {
         display: inline-block;
     }
-} 
+}
 @media (min-width: 720px) {
     .fr-view span.fr-emoticon,.fr-view span.fr-emoticon>span.ssb-bg-color-inline-block{
         ///display: table-cell;
@@ -35,4 +35,7 @@
     display: inline-flex;
     line-height: 1;
   }
+ .fr-fontAwesomeIcon .ssb-bg-color-inline-block{
+      font-family: 'FontAwesome' !important;
+   }
 }
