#10543 Added skelton for activity timeline

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -416,7 +416,7 @@
                     </div>
                 </div>
             </div>
-            <contact-activity single-contact="true" current-page="1" num-per-page="10" contact-id="{{vm.state.contactId}}" contact="vm.state.contact"></contact-activity>
+            <contact-activity-component contact-id="vm.state.contactId"></contact-activity-component>
         </div>
         <div class="clearfix"></div>
     </div>
