--- a/public/less/frontend/components/navbar-v1.less
+++ b/public/less/frontend/components/navbar-v1.less
@@ -233,6 +233,16 @@ ul.nav {
 .overflow_visible.unset{
      z-index: unset;
 }
+.ssb-layout__header_2-col_footer.ssb-page-blog-list{ 
+    .overflow_visible{
+        overflow: auto !important;
+        z-index: 10;
+    }
+    .overflow_visible.unset{
+         z-index: unset;
+    }
+}
+
 li.nav-active ul.nav-sub-menu{
     display: block!important;
 }
