--- a/public/admin/assets/js/contact-details/activity/contact-activity.component.html
+++ b/public/admin/assets/js/contact-details/activity/contact-activity.component.html
@@ -24,8 +24,10 @@
 	        	</div>
 	        	<div collapse="panel_0">
 	        		<ul class="timeline-xs">
+
 		                <li class="timeline-item success padding-bottom-20" ng-repeat="activity in value | filter:orderBy:activity.start:true" ng-if="(activity.activityType)">
-		                    <div class="margin-left-15 padding-15 activity-content">
+		                	<i class="fa fa-eye fa-1"></i>
+		                    <div class="margin-left-30 padding-15 activity-content">
 		                        <div class="text-muted text-small">
 		                            {{activity.start | date:'MMM d, y h:mm:ss a'}} {{getActivityName(activity.activityType)}}
 		                        </div>
