--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -230,7 +230,7 @@ contact-details-component{
                 &:before{
                     position: absolute;
                     top: 11px;
-                    left: 9px;
+                    left: 24px;
                     content: '';
                     border-right: solid 7px #ccc;
                     border-bottom: solid 7px transparent;
@@ -239,13 +239,38 @@ contact-details-component{
                 &:after{
                     position: absolute;
                     top: 12px;
-                    left: 10px;
+                    left: 25px;
                     content: '';
                     border-right: solid 6px #fff;
                     border-bottom: solid 6px transparent;
                     border-top: solid 6px transparent;
                 }
             }
+
+            .timeline-item{                
+                &:after{
+                    width: 36px;
+                    border-radius: 50%;
+                    height: 36px;
+                    margin-left: -18px;
+                    top:0;
+                }
+            }
+
+            .timeline-item.success{
+                border-left-color: #c8c7cc;
+                &:after{
+                    border-color: #c8c7cc;
+                }
+                i.fa{
+                    z-index: 1;
+                    position: absolute;
+                    left: -9px;
+                    font-size: 18px;
+                    top: 9px;
+                }
+            }
+                
         }   
     }
 }
