#10543 timeline contorl css to match UI

--- a/public/admin/assets/js/contact-details/activity/contact-activity.component.html
+++ b/public/admin/assets/js/contact-details/activity/contact-activity.component.html
@@ -18,7 +18,7 @@
     <div>
     	<div ng-repeat="(key, value) in vm.state.activities">
     		<div id="panel_0">
-    			<div class="panel-heading border-light">
+    			<div class="panel-heading border-light padding-0 panel-activity">
 		            <h4 class="">{{key}}</h4>		            
 		            <ct-paneltool class="panel-tools" tool-collapse="tool-collapse"></ct-paneltool>
 	        	</div>
