--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -214,6 +214,7 @@ contact-details-component{
         
     }
     .contact-details-right-pane{
+        padding-left: 25px;
         .panel-white{
             border: none !important;
         }
@@ -271,6 +272,23 @@ contact-details-component{
                 }
             }
                 
-        }   
+        }
+        .panel-activity{
+            h4{
+                margin-left: 15px;
+            }
+            .panel-tools{
+                left: -20px;
+                top: -5px;
+                a{
+                    color: inherit;
+                    i{
+                        font-weight: bold;
+                        font-size: 16px;
+                    }
+                }
+                
+            }
+        }  
     }
 }
